fixing mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ body {
 		/* overflow: hidden; */
 		background-color: #141313;
 		/* background-color: blue; */
-		width: 94%;
+		width: 100%;
 		height: 10%;
 		padding: 20px 10px;
 		z-index: 500;
@@ -445,7 +445,7 @@ body {
 	.header-right {
 		float: right;
 		position: relative;
-		right: 10px;
+		right: 0px;
 		pointer-events: visible;
 	}
 
@@ -516,7 +516,7 @@ body {
 		font-size: 2.8em;
 		text-align: center;
 		line-height: 145%;
-		margin-top: 50px !important;
+		/* margin-top: 50px !important; */
 	}
 
 }
